Added tests to VehicleService